Previous fix seems to have worked, but it introduced a minor display issue on the backside of #lac. Covering up that issue by increasing the border radius to hide it.

--- a/scss/flip-card-styles.scss
+++ b/scss/flip-card-styles.scss
@@ -110,7 +110,7 @@
 #lac {
 	background: $elmsgreen;
 	position: relative;
-	border-radius: 5px;
+	border-radius: 20px;
 	width: 290px;
 	left: 5px;
 	height: 190px;
